--- a/thesis-main/document/FrontMatter/Abstract.tex
+++ b/thesis-main/document/FrontMatter/Abstract.tex
@@ -1,5 +1,5 @@
 \begin{resumen}
-Este Trabajo de Diploma muestra los resultados de la investigación realizada para encontrar un método de síntesis de voz, en español para adaptar a la voz cubana. La investigación se centra en diversas cuestiones. La primera, es el estado de la síntesis de voz mediante aprendizaje profundo en la actualidad, y la complejidad para poder generar una voz artificial con este método. Se eligen las herramientas para llevar a cabo esta tarea, así como los modelos Tacotron2 y VITS con el mismo fin, un sistema de dos etapas y un modelo de extremo a extremo respectivamente. Se construye una base de datos con un hablante cubano para cumplir con el requisito del acento cubano en el sistema de conversión de texto a voz que se persigue desarrollar. Se experimenta mediante entrenamientos y reentrenamientos de difentes variantes de los modelos antes mencionados, especialmente del modelo VITS, pues el modelo Tacotron2 arroja resultados desanlentadores desde las primeras etapas. Por último se realiza una evaluación de los resultados donde se concluye que la mayor importancia para el cumplimiento satisfactorio del objetivo principal, que es el desarrollo de un sintetizador de voz en español, adaptado a la voz cubana, está en los conjuntos de datos para el entrenamiento de modelos. 
+Este Trabajo de Diploma muestra los resultados de la investigación realizada para encontrar un método de síntesis de voz, en español para adaptar a la voz cubana. La investigación se centra en diversas cuestiones. La primera, es el estado de la síntesis de voz mediante aprendizaje profundo en la actualidad, y la complejidad para poder generar una voz artificial con este método. Se eligen las herramientas para llevar a cabo esta tarea, así como los modelos Tacotron2 y VITS: un sistema de dos etapas y un modelo de extremo a extremo respectivamente. Se construye una base de datos con un hablante cubano para cumplir con el requisito del acento cubano en el sistema de conversión de texto a voz que se persigue desarrollar. Se experimenta mediante entrenamientos y reentrenamientos de difentes variantes de los modelos antes mencionados, especialmente del modelo VITS, pues el modelo Tacotron2 arroja resultados desanlentadores desde las primeras etapas. Por último se realiza una evaluación de los resultados donde se concluye que la mayor importancia para el cumplimiento satisfactorio del objetivo principal, que es el desarrollo de un sintetizador de voz en español, adaptado a la voz cubana, está en los conjuntos de datos para el entrenamiento de modelos. 
 \end{resumen}
 
 \begin{abstract}
