--- a/thesis-main/document/FrontMatter/Thanks.tex
+++ b/thesis-main/document/FrontMatter/Thanks.tex
@@ -7,7 +7,7 @@
 	
     A mis tíos: Edel, Julian, Nelson, Yuleika y Lucía por ser mis segundos padres. A mis primos Lauren, Lorena, Yoha, Ale y July por ser como mis hermanos, y especialmente a Yoha, por ser parte importante en la realización de esta tesis.
 	 
-	A todos mis amigos por hacer de estos 5 años los mejores, especialmente aquellos con los que he compartido risas, lágrimas, horas de estudio y momentos de diversión. Baby, Amalia, Ariel, Nadia, Luis y Jose, gracias por la oficina y \textit{for the good old days}.  
+	A todos mis amigos por hacer de estos 5 años los mejores, especialmente aquellos con los que he compartido risas, lágrimas, horas de estudio y momentos de diversión. Baby, Amalia, Ariel, Nadia, Luis y Jose, gracias por la oficina y \textit{for the good old days}. Y Abel por siempre creer en mí.  
 	
 	A mis profesores, los que me inspiraron durante mi formación.
 	
