--- a/thesis-main/document/MainMatter/Background.tex
+++ b/thesis-main/document/MainMatter/Background.tex
@@ -2,11 +2,15 @@
 
 Las redes neuronales profundas han sido las encargadas de los avances actuales en el campo TTS, por tanto esta será la línea seguida en la investigación. \\
 
-En este capítulo se realiza un análisis profundo de las que a criterio del autor son los modelos más efectivos para la conversión de texto a voz. Para lograr la transformación de texto a voz, se siguen dos enfoques distintos. El primero es un sistema de dos etapas: una combinación de dos redes neuronales profundas, una para convertir de texto a espectograma de mel \footnote{Un espectrograma de mel es un espectrograma en el que las frecuencias se convierten a la escala de mel. La escala de Mel propuesta en 1937 por Stevens, Volkmann y Newmann, es una unidad de tono tal que distancias iguales en el tono suenan igualmente distantes para el oyente.} y luego otra que transforma el espectograma en onda sonora, en la sección \ref{two-stages} se exponen varios de los modelos correspondientes a cada etapa. El segundo criterio es un modelo de extremo a extremo que se explica en la sección \ref{end-to-end}
+En este capítulo se realiza un análisis profundo de los que, a criterio del autor, son los modelos más efectivos para la conversión de texto a voz. Para lograr la transformación de texto a voz, se siguen dos enfoques. El primero es un sistema de dos etapas: una combinación de dos redes neuronales profundas, una para convertir de texto a espectograma de mel \footnote{Un espectrograma de mel es un espectrograma en el que las frecuencias se convierten a la escala de mel. La escala de Mel propuesta en 1937 por Stevens, Volkmann y Newmann, es una unidad de tono tal que distancias iguales en el tono suenan igualmente distantes para el oyente.} y luego otra que transforma el espectograma en onda sonora, en la sección \ref{two-stages} se exponen varios de los modelos correspondientes a cada etapa. El segundo criterio es un modelo de extremo a extremo que se explica en la sección \ref{end-to-end}
 
 \section{Sistemas de dos etapas} \label{two-stages}
 
-El paradigma predominante en la conversión de texto a voz es la síntesis en dos etapas, es decir, primero, producir espectrogramas de mel a partir del texto y, luego las ondas de sonido reales con un modelo de codificador de voz(\textit{VoCoder}. La representación acústica de bajo nivel, espectograma de mel, es la utilizada como nexo entre las dos componentes.
+El paradigma predominante en la conversión de texto a voz es la síntesis en dos etapas, es decir, primero, producir espectrogramas de mel a partir del texto y, luego las ondas de sonido reales con un modelo de codificador de voz(\textit{VoCoder}). La representación acústica de bajo nivel, espectograma de mel, es la utilizada como nexo entre las dos componentes.
+
+Un espectrograma de mel está relacionado con el espectograma de frecuencia lineal, es decir, la magnitud de la transformada de Fourier de tiempo corto (STFT, por sus siglas del inglés \textit{short-time Fourier transform}). Se obtiene aplicando una transformada no lineal al eje de frecuencia de la STFT, inspirado en respuestas calificadas por el sistema auditivo humano, y resume el contenido de frecuencia con menos dimensiones.
+
+El uso de una escala de frecuencia auditiva de este tipo tiene el efecto de enfatizar detalles en frecuencias más bajas, que son fundamentales para la inteligibilidad del habla, al mismo tiempo que se resta importancia a los detalles de alta frecuencia, que están dominados por ráfagas de ruido y generalmente no necesitan ser modelados con alta fidelidad. Debido a estas propiedades, las características derivadas de la escala de mel se han utilizado como representación base para el reconocimiento de voz durante muchas décadas. 
 
 
 \subsection{Modelos TTS}
@@ -14,24 +18,18 @@ La etapa 1, es la encargada de la obtención de espectrogramas representativos a
 
 \subsubsection{Tacotron}
 
-Tacotron[\cite{wang2017tacotron}] es una DNN entrenada para obtener un espectrograma a partir de una frase de entrada. Es de tipo secuencia a secuencia con un paradigma de atención. Este modelo toma caracteres como entrada y devuelve un espectograma sin procesar usando técnicas para mejorar un modelo seq2seq\footnote{Seq2Seq se basa en el paradigma codificador-decodificador. El codificador codifica la secuencia de entrada, mientras que el decodificador produce la secuencia de destino. codificador} vainilla\footnote{En informática, vainilla es el término utilizado cuando el \textit{software} o los algoritmos, no se emplean a partir de su forma original.}. Dado un par <texto,audio>, Tacotron puede ser entrenado desde cero con una inicialización aleatoria, y no requiere alineación a nivel de fonema.\\
+Tacotron[\cite{wang2017tacotron}] es una DNN entrenada para obtener un espectrograma a partir de una frase de entrada. Es de tipo secuencia a secuencia con un paradigma de atención. Este modelo toma caracteres como entrada y devuelve un espectograma sin procesar usando técnicas para mejorar un modelo seq2seq\footnote{Seq2Seq se basa en el paradigma codificador-decodificador. El codificador codifica la secuencia de entrada, mientras que el decodificador produce la secuencia de destino.} vainilla\footnote{En informática, vainilla es el término utilizado cuando el \textit{software} o los algoritmos, no se emplean a partir de su forma original.}. Dado un par <texto,audio>, Tacotron puede ser entrenado desde cero con una inicialización aleatoria, y no requiere alineación a nivel de fonema.\\
 
-La columna vertebral de Tacotron es un modelo seq2seq con atención, que toma caracteres como entrada, y devuelve el correspondiente espectograma sin procesar, para luego pasarlo al modelo o algoritmo que sinteiza la voz. \\
+La columna vertebral de Tacotron es un modelo seq2seq con atención, que toma caracteres como entrada, y devuelve el correspondiente espectograma sin procesar, para luego pasarlo al modelo o algoritmo que sintetiza la voz. \\
 
 Tacotron se basa en cuadros, o \textit{frames}, por lo que la inferencia es sustancialmente más rápida que los métodos autorregresivos a nivel de muestra. A diferencia de otras tecnologías TTS más antiguas, Tacotron no necesita características lingüísticas diseñadas a mano ni componentes complejos, este modelo realiza una normalización de texto simple.
 
 
 \subsubsection{Tacotron 2}
 
-Tacotron 2[\cite{shen2018natural}] es similar al anteriormente mencionado Tacotron; es una red recurrente de predicción de características, de tipo secuencia a secuencia con atención, que mapea incrustaciones(del inglés, \textit{embeddings}) de caracteres en espectrogramas de mel. 
+Tacotron 2[\cite{shen2018natural}] es similar al anteriormente mencionado Tacotron; es una red recurrente de predicción de características, de tipo secuencia a secuencia con atención, que mapea incrustaciones(del inglés, \textit{embeddings}) de caracteres en espectrogramas de mel. Para Tacotron2 los espectrogramas de mel se calculan a través de un transformada de Fourier de tiempo corto (STFT). \\
 
-Un espectrograma de mel está relacionado con el espectograma de frecuencia lineal, es decir, la magnitud de la transformada de Fourier de tiempo corto (STFT, por sus siglas del inglés \textit{short-time Fourier transform}). Se obtiene aplicando una transformada no lineal al eje de frecuencia de la STFT, inspirado en respuestas calificadas por el sistema auditivo humano, y resume el contenido de frecuencia con menos dimensiones.
-
-El uso de una escala de frecuencia auditiva de este tipo tiene el efecto de enfatizar detalles en frecuencias más bajas, que son fundamentales para la inteligibilidad del habla, al mismo tiempo que se resta importancia a los detalles de alta frecuencia, que están dominados por ráfagas de ruido y generalmente no necesitan ser modelados con alta fidelidad. Debido a estas propiedades, las características derivadas de la escala de mel se han utilizado como representación base para el reconocimiento de voz durante muchas décadas. 
-
-Para Tacotron2 los espectrogramas de mel se calculan a través de un transformada de Fourier de tiempo corto (STFT). \\
-
-La DNN del modelo Tacotron2 está compuesto por un codificador y un decodificador con atención. El codificador convierte una secuencia de caracteres en una representación oculta que alimenta al decodificador para predecir un espectrograma. Los caracteres de entrada se representan utilizando una incrustación de caracteres. La salida del codificador es consumida por una red de atención que resume la secuencia codificada completa como un vector de contexto de longitud fija para cada paso de salida del decodificador.
+La DNN del modelo Tacotron2 está compuesta por un codificador y un decodificador con atención. El codificador convierte una secuencia de caracteres en una representación oculta que alimenta al decodificador para predecir un espectrograma. Los caracteres de entrada se representan utilizando una incrustación de caracteres. La salida del codificador es consumida por una red de atención que resume la secuencia codificada completa como un vector de contexto de longitud fija para cada paso de salida del decodificador.
 
 El decodificador es una red neuronal autorregresiva recurrente que predice un espectrograma de mel a partir de la secuencia de entrada codificada un fotograma a la vez. 
 
@@ -43,7 +41,7 @@ Deep Voice de Baidu[\cite{deep-voice}][\cite{arik2018neural}] sentó las bases p
 
 Deep Voice 2 [\cite{arik2018neural}]  se presentó como una mejora de la arquitectura original de Deep Voice. Si bien la canalización principal era bastante similar, cada modelo se creó desde cero para mejorar su rendimiento. Otra gran mejora fue la adición de compatibilidad con varios hablantes.
 
-Deep Voice 3 [\cite{arik2018neural}][\cite{deep-voice3}] es un rediseño completo de las versiones anteriores. Aquí se tiene un solo modelo en lugar de cuatro diferentes. Más específicamente, los autores propusieron una arquitectura de caracter a espectrograma completamente convolucional que es ideal para el cálculo paralelo. A diferencia de los modelos basados en RNN. También se experimentó con diferentes métodos de síntesis de forma de onda con WaveNet logrando los mejores resultados una vez más.
+Deep Voice 3 [\cite{arik2018neural}][\cite{deep-voice3}] es un rediseño completo de las versiones anteriores. Aquí se tiene un solo modelo en lugar de cuatro diferentes. Más específicamente, los autores propusieron una arquitectura de caracter a espectrograma completamente convolucional que es ideal para el cálculo paralelo. A diferencia de los modelos basados en RNN\footnote{Red recurrente neuronal, del inglés Recurrent Neuronal Network, es una clase de red neuronal artificial donde las conexiones entre nodos pueden crear un ciclo, lo que permite que la salida de algunos nodos afecte la entrada posterior a los mismos nodos.}. También se experimentó con diferentes métodos de síntesis de forma de onda con WaveNet logrando los mejores resultados una vez más.
 
 \subsubsection{Transformers}
 Los transformadores(\textit{transformers}), están dominando el campo del lenguaje natural desde hace un tiempo, por lo que era inevitable que ingresaran gradualmente al campo TTS. Los modelos basados en transformadores tienen como objetivo abordar dos problemas de los métodos TTS anteriores, como Tacotron2:
@@ -56,7 +54,7 @@ La primera arquitectura basada en transformadores se introdujo en 2018 y reempla
 
 \subsubsection{FastSpeech}
 
-FastSpeech, una novedosa red de avance basada en Transformer para generar espectrogramas de mel en paralelo para TTS; toma como entrada una secuencia de texto(fonema) y genera espectrogramas de mel de forma no autorregresiva. Adopta una red feed-forward basada en la autoatención\footnote{La autoatención permite a una red neuronal entender una palabra en el contexto de las palabras que la rodean.} en Transformer y convolución de 1D. 
+FastSpeech, una novedosa red de avance basada en Transformer para generar espectrogramas de mel en paralelo para TTS; toma como entrada una secuencia de texto(fonema) y genera espectrogramas de mel de forma no autorregresiva. Adopta una red \textit{feed-forward} basada en la autoatención\footnote{La autoatención permite a una red neuronal entender una palabra en el contexto de las palabras que la rodean.} en Transformer y convolución de 1D. 
 
 
 El modelo resuelve problemas existentes en modelos TTS antiguos de la siguiente forma:
@@ -81,12 +79,12 @@ El modelo FastSpeech puede casi coincidir con el modelo autoregresivo Transforme
 
 
 \subsubsection{FastPitch}
-FastPitch es un modelo TTS feed-forward completamente paralelo basado en FastSpeech, condicionado por contornos de frecuencia fundamentales. El modelo predice contornos de tono durante la inferencia. Al alterar estas predicciones, el discurso generado puede ser más expresivo, coincidir mejor con la semántica del enunciado y, al final, ser más atractivo para el oyente.
+FastPitch es un modelo TTS \textit{feed-forward} completamente paralelo basado en FastSpeech, condicionado por contornos de frecuencia fundamentales. El modelo predice contornos de tono durante la inferencia. Al alterar estas predicciones, el discurso generado puede ser más expresivo, coincidir mejor con la semántica del enunciado y, al final, ser más atractivo para el oyente.
 
 Los modelos paralelos pueden sintetizar órdenes de magnitud de espectrogramas de mel más rápido que los autorregresivos, ya sea basándose en alineaciones externas o alineándose ellos mismos. El condicionamiento en la frecuencia fundamental también mejora la convergencia y elimina la necesidad de destilar el conocimiento de los objetivos del espectrograma de mel utilizados en FastSpeech.\\
 
 
-La arquitectura del modelo, se basa en FastSpeech y se compone principalmente de dos pilas de transformadores alimentados hacia adelante, feed-forward(FFTr) . El primero opera en la resolución de los tokens de entrada, el segundo en la resolución de los cuadros de salida.
+La arquitectura del modelo, se basa en FastSpeech y se compone principalmente de dos pilas de transformadores alimentados hacia adelante(FFTr) . El primero opera en la resolución de los tokens de entrada, el segundo en la resolución de los cuadros de salida.
 [\cite{lancucki2021fastpitch}].\\
 
 Para el entrenamiento y la experimentación los parámetros del modelo siguen principalmente FastSpeech.
@@ -94,15 +92,15 @@ Para el entrenamiento y la experimentación los parámetros del modelo siguen pr
 \subsubsection{Glow-TTS}
 A pesar de la ventaja, los modelos TTS paralelos no se pueden entrenar sin la guía de modelos TTS autorregresivos como alineadores externos. 
 
-Glow-TTS[\cite{kim2020glow}][\cite{glowtts}] es un modelo generativo basado en flujo para TTS paralelo que no requiere de ningún alineador externo. Al combinar las propiedades de los flujos y la programación dinámica, el el modelo busca la alineación monótona más probable entre el texto y la representación latente del habla en sí misma.
+Glow-TTS[\cite{kim2020glow}][\cite{glowtts}] es un modelo generativo basado en flujo para TTS paralelo que no requiere de ningún alineador externo. Al combinar las propiedades de los flujos y la programación dinámica, el modelo busca la alineación monótona más probable entre el texto y la representación latente del habla en sí misma.
 La arquitectura del modelo consiste en un codificador que sigue la estructura del codificador de \textit{Transformer TTS} con pequeñas modificaciones, un predictor de duración, que tiene una estructura y configuración como la de FastSpeech, y finalmente un decodificador basado en flujo, que es la parte fundamental del modelo.
 
-Se demostró que hacer cumplir alineaciones monótonas fuerte permite un texto a voz robusto, que se generaliza a largas pronunciaciones, y el empleo de flujos generativos permite síntesis de voz rápida, diversa y controlable. Glow-TTS puede generar espectrogramas de mel 15,7 veces más rápido que el modelo TTS autorregresivo,
-Tacotron 2, mientras obtiene un rendimiento con calidad de voz comparable. Según la literatura, el modelo se puede extender fácilmente a una configuración de múltiples hablantes.
+Ha sido demostrado que hacer cumplir alineaciones monótonas fuertes permite un texto a voz robusto, que se generaliza a largas pronunciaciones, y el empleo de flujos generativos permite síntesis de voz rápida, diversa y controlable. Glow-TTS puede generar espectrogramas de mel 15,7 veces más rápido que el modelo TTS autorregresivo,
+Tacotron 2, mientras obtiene un rendimiento con calidad de voz comparable. Según la literatura, el modelo se puede extender fácilmente a una configuración de múltiples hablantes[\cite{kim2020glow}].
 
 
 \subsection{VoCoders}
-  Los VoCoders neuronales basados en redes neuronales profundas pueden generar voces similares a las humanas, en lugar de utilizar las tradicionales
+  Los VoCoders neuronales basados en redes neuronales profundas pueden generar voces similares a las humanas, en lugar de utilizar los tradicionales
   métodos que contienen artefactos audibles[\cite{griffin1984signal}][\cite{kawahara1999restructuring}][\cite{morise2016world}]. 
   
   La línea principal de la investigación se basa en los modelos TTS, como los antes expuestos, sin embargo como no es posible sintetizar voz sin un VoCoder, y luego de varias pruebas realizadas, se concluye que los más adecuados para el objetivo principal son los siguientes:
@@ -122,7 +120,7 @@ Usando espectrogramas de mel de banda completa como entrada, se espera generar s
 
 \subsubsection{WaveGrad}
 
-WaveGrad[\cite{chen2020wavegrad}] es un modelo condicional para la generación de formas de onda que estima los gradientes de la densidad de datos. El modelo se basa en trabajos previos sobre emparejamiento de puntuaciones y modelos probabilísticos de difusión. Parte de una señal Gaussiana de ruido blanco e iterativamente refina la señal a través de un muestreador basado en gradientes, condicionado en el espectrograma de mel. WaveGrad ofrece una forma natural de intercambiar velocidad de referencia por calidad de la muestra ajustando el número de pasos de refinamiento, y cierra la brecha entre los modelos autorregresivos y no autorregresivos en términos de calidad de audio. El modelo puede generar muestras de audio de alta fidelidad usando como tan solo seis iteraciones. Los experimentos revelan que WaveGrad genera señales de audio de alta fidelidad, superando las líneas de base adversariales no autorregresivas y emparejando un fuertemente la línea de base autorregresiva basada en la probabilidad, utilizando menos operaciones secuenciales.
+WaveGrad[\cite{chen2020wavegrad}] es un modelo condicional para la generación de formas de onda que estima los gradientes de la densidad de datos. El modelo se basa en trabajos previos sobre emparejamiento de puntuaciones y modelos probabilísticos de difusión. Parte de una señal Gaussiana de ruido blanco e iterativamente refina la señal a través de un muestreador basado en gradientes, condicionado en el espectrograma de mel. WaveGrad ofrece una forma natural de intercambiar velocidad de referencia por calidad de la muestra ajustando el número de pasos de refinamiento, y cierra la brecha entre los modelos autorregresivos y no autorregresivos en términos de calidad de audio. Los experimentos revelan que WaveGrad genera señales de audio de alta fidelidad, superando las líneas de base adversariales no autorregresivas y emparejando un fuertemente la línea de base autorregresiva basada en la probabilidad, utilizando menos operaciones secuenciales.
 
 
 \section{Modelos de extremo a extremo} \label{end-to-end}
@@ -143,7 +141,7 @@ El decodificador es en esencia el generador HiFi-GAN V1[\cite{kong2020hifi}]. El
 
 El predictor de duración estocástica estima la distribución de la duración del fonema a partir de una entrada condicional. Para la parametrización eficiente del predictor de duración estocástica, son apilados bloques residuales\footnote{Los bloques residuales son bloques de conexión salteada que aprenden funciones residuales con referencia a las entradas de la capa, en lugar de aprender funciones no referenciadas. Se introdujeron como parte de la arquitectura de las redes residuales[\cite{he2016deep}].} y capas convolucionales separables en profundidad\footnote{Mientras que la convolución estándar realiza el cálculo espacial y de canal en un solo paso, la convolución separable en profundidad divide el cálculo en dos pasos: la convolución en profundidad aplica un único filtro convolucional por cada canal de entrada y la convolución en punto se usa para crear una combinación lineal de la salida de la convolución en profundidad.}[\cite{chollet2017xception}]. También se aplican flujos de ranunas neuronales[\cite{durkan2019neural}], que toman la forma de transformaciones no lineales invertibles. 
 
-Una vez concluido el proceso de entrenamiento, y según la literatura al compararse este modelo de extremo a extremo con sistemas de dos etapas, a través de modelos preentrenados como son: Tacotron2 y Glow-TTS como modelos de primer escenario e HiFi-GAN como modelo de segundo escenario, se comprueba que VITS obtiene un habla que suena más natural y cercana a la realidad. Una evaluación humana subjetiva (puntuación de opinión media, o MOS), muestra que el modelo entrenado sobre LJ Speech\footnote{LJ Speech es un conjunto de datos de un solo hablante}[\cite{ljspeech}], supera a los mejores sistemas TTS disponibles públicamente y logra un MOS comparable a voces reales.
+Una vez concluido el proceso de entrenamiento, y según la literatura, al compararse este modelo de extremo a extremo con sistemas de dos etapas, a través de modelos preentrenados como son: Tacotron2 y Glow-TTS como modelos de primer escenario e HiFi-GAN como modelo de segundo escenario, se comprueba que VITS obtiene un habla que suena más natural y cercana a la realidad. Una evaluación humana subjetiva (puntuación de opinión media, o MOS), muestra que el modelo entrenado sobre LJ Speech\footnote{LJ Speech es un conjunto de datos de un solo hablante}[\cite{ljspeech}], supera a los mejores sistemas TTS disponibles públicamente y logra un MOS comparable a voces reales.
 
 Ha mostrado la capacidad de ampliarse a la síntesis de voz de múltiples hablantes, generando un discurso con diversos tonos y ritmos de acuerdo a diferentes identidades de hablantes. Esto demuestra que aprende y expresa varias características del habla en un contexto de extremo a extremo[\cite{kim2021conditional}].\\
 
