--- a/thesis-main/document/MainMatter/Introduction.tex
+++ b/thesis-main/document/MainMatter/Introduction.tex
@@ -75,10 +75,10 @@ Desarrollar un sintetizador de texto a voz adaptado a voces cubanas.
 
 La tesis está estructurada de la siguiente manera: resumen, resumen en inglés, introducción, tres capítulos, conclusiones, recomendaciones y bibliografía. Los tres capítulos abarcan los aspectos esenciales relacionados con el contenido de la investigación:\\
 
-El \textbf{Capítulo 1. Sistemas para la síntesis de texto a voz} trata de lo concerniente a la fundamentación teórica y estudio del arte de los Sistemas de conversión de texto a voz, que tienen como base la síntesis neural. Para cada método se analizan: características generales, componentes y razones para su
+El \textbf{Capítulo \ref{chapter:state-of-the-art}. Sistemas para la síntesis de texto a voz} trata lo concerniente a la fundamentación teórica y estudio del arte de los Sistemas de conversión de texto a voz, que tienen como base la síntesis neural. Para cada método se analizan: características generales, componentes y razones para su
 utilización. \\
 
-El \textbf{Capítulo 2. Propuesta} describe la propuesta del autor para el desarrollo del sintetizador de voz con voces cubanas. A partir de experimentos iniciales, se exponen los enfoques que se utilizarán para el cumplimiento satisfactorio de los objetivos de la tesis.\\
+El \textbf{Capítulo \ref{chapter:proposal}. Propuesta} describe la propuesta del autor para el desarrollo del sintetizador de voz con voces cubanas. A partir de experimentos iniciales, se exponen los enfoques que se utilizarán para el cumplimiento satisfactorio de los objetivos de la tesis.\\
 
  
-El \textbf{Capítulo 3. Experimentación y Resultados,} abarca la etapa de implementación de la propuesta, herramientas utilizadas, experimentación, evaluación de los modelos obtenidos y por último, interpretación de los resultados.
+El \textbf{Capítulo \ref{chapter:implementation}. Experimentación y Resultados,} abarca la etapa de implementación de la propuesta, herramientas utilizadas, experimentación, evaluación de los modelos obtenidos y por último, interpretación de los resultados.
